--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,39 @@
 /* You can add global styles to this file, and also import other style files */
+/* You can add global styles to this file, and also import other style files */
+
+html {
+  height: 100%;
+  width: 100%;
+  background-color:rgb(108,197,132);
+ }
+
+ .router {
+  height: 70%;
+  width: 100%;
+  background-color: white;
+  border-radius: 30px;
+  display: flex;
+}
+
+.img-row {
+  width: 100%;
+  height: 30%;
+  background-color:rgb(108,197,132);
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+ }
+
+.img-row img {
+  height: 178px;
+  width: 220px;
+}
+
+ .body {
+   display: flex;
+   flex-direction: column;
+   height: 90%;
+   width: 50%;
+   margin-left: 25%;
+ }
