--- a/src/app/pages/hello/hello.component.html
+++ b/src/app/pages/hello/hello.component.html
@@ -1,8 +1,19 @@
-<div class="q1">
-    <div class="title-container">
-      <h3 class="title">Homi: Tenant Review</h3>
-    </div>
-    <div fxFlex class="thank-you">
-      <p>Thank you so much for participating</p>
-    </div>
+<div class="hello-page">
+  <div class="row">
+    <h3 class="title">Welcome</h3>
+  </div>
+  <div fxFlex class="row">
+    <p class="main-text">Homi aims to bring living conditions into the light,
+      making your flatting experience benefit someone else once recorded.
+      If you wouldn't mind doing our quick survey about your current flat,
+      we would very much appreciate it.</p>
+  </div>
+  <div class="row">
+    <button mat-raised-button [routerLink]="['/1']">LETS BEGIN</button>
+  </div>
+  <div class="row">
+    <p class="disclaimer">Please note that by participating in this survey,
+      giving us permission to use the information anonymously.
+    </p>
+  </div>
 </div>
