--- a/src/app/pages/hello/hello.component.html
+++ b/src/app/pages/hello/hello.component.html
@@ -9,7 +9,7 @@
       we would very much appreciate it.</p>
   </div>
   <div class="row">
-    <button mat-raised-button [routerLink]="['/1']">LETS BEGIN</button>
+    <button class="lets-begin-button" mat-raised-button color="primary" isRoundButton="true" [routerLink]="['/1']">LETS BEGIN</button>
   </div>
   <div class="row">
     <p class="disclaimer">Please note that by participating in this survey,
