Added first question page and made pretty

--- a/src/app/pages/hello/hello.component.html
+++ b/src/app/pages/hello/hello.component.html
@@ -1,9 +1,9 @@
 <div class="hello-page">
-  <div class="row">
-    <h3 class="title">Welcome</h3>
+  <div class="row title">
+    <h3 class="green">Welcome</h3>
   </div>
   <div fxFlex class="row">
-    <p class="main-text">Homi aims to bring living conditions into the light,
+    <p class="main-text green">Homi aims to bring living conditions into the light,
       making your flatting experience benefit someone else once recorded.
       If you wouldn't mind doing our quick survey about your current flat,
       we would very much appreciate it.</p>
@@ -12,8 +12,8 @@
     <button class="lets-begin-button" mat-raised-button color="primary" isRoundButton="true" [routerLink]="['/1']">LETS BEGIN</button>
   </div>
   <div class="row">
-    <p class="disclaimer">Please note that by participating in this survey,
-      giving us permission to use the information anonymously.
+    <p class="disclaimer green">
+      Please note that by participating in this survey, giving us permission to use the information anonymously.
     </p>
   </div>
 </div>
