--- a/src/app/pages/hello/hello.component.scss
+++ b/src/app/pages/hello/hello.component.scss
@@ -3,7 +3,7 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: space-between;
 }
 
 .row {
@@ -17,14 +17,20 @@
 .main-text {
   width: 60%;
   display: flex;
-  color: #6AC781;
   font-size: 2.3ch;
-  font-family: helvetica;
 }
 
 .title {
-  color: #6AC781;
+  height: 20%;
   font-size: 4ch;
   font-weight: bold;
-  font-family: helvetica;
+}
+
+.disclaimer {
+  font-size: 0.7ch;
+}
+
+.lets-begin-button {
+  height: 120%;
+  width: 30%;
 }
