--- a/src/app/pages/question-one/question-one.component.html
+++ b/src/app/pages/question-one/question-one.component.html
@@ -1,1 +1,24 @@
-qyestion 1!!
+<!-- Refactory this to make it mat-form -->
+<div class="question-one-page">
+  <div class="column">
+    <div class="title green">
+      ADDRESS
+    </div>
+    <mat-form-field>
+        <input matInput placeholder="Input">
+      </mat-form-field>
+  </div>
+  <div class="column">
+    <div class="title green">
+      UPLOAD A PHOTO
+    </div>
+    <div class="row">
+      <div>
+          <button class="upload-img-button" mat-raised-button color="primary" isRoundButton="true">LETS BEGIN</button>
+      </div>
+      <div>
+          <button class="google-map-button" mat-raised-button color="primary" isRoundButton="true">LETS BEGIN</button>
+      </div>
+    </div>
+  </div>
+</div>
